[tool.poetry]
name = "humanposebot"
version = "0.1.0"
description = "Telegram bot featuring human pose estimation."
authors = ["Andrey Chipizubov, Radik Ismagilov"]
readme = ""

[tool.poetry.dependencies]
python = "~3.10"
aiogram = "2.23.1"
torch = {version = "2.0.1", source = "torch"}
torchvision = {version = "0.15.2", source = "torch"}
ultralytics = "8.0.203"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
